--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.33",
